samples/_failures_safe/1761040187_e1f553_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be63e870.c: In function ‘main’:
./samples/SAFE/__tmp_be63e870.c:179:16: error: missing terminating " character
  179 |         printf("Invalid input for cols1
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_be63e870.c:179:9: error: expected expression at end of input
  179 |         printf("Invalid input for cols1
      |         ^~~~~~
./samples/SAFE/__tmp_be63e870.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be63e870.c:179:9: error: expected declaration or statement at end of input
